--- a/snake.html
+++ b/snake.html
@@ -45,7 +45,7 @@
 		<div id="score">得分:0</div>
 	</div>
 </body>
-<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript">
 	//声明变量
 	var divArr = [];//创建每个小格子所在的数组
